# crow

./: BOOK.md  CLAUDE.md  Cargo.toml  INTERNALS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: README.md  run.sh
bench/crow/: binary_trees.crow  fib.crow  mandelbrot.crow
bench/go/: binary_trees.go  fib.go  mandelbrot.go
crowc/: Cargo.toml
crowc/src/: ast.rs  codegen.rs  lexer.rs  main.rs  mono.rs  parser.rs  typeck.rs  types.rs
crowc/tests/: cli.rs  e2e.rs  lang.rs
crowc/tests/common/: mod.rs
examples/: features.crow  features.out  fib.crow  fib.out  gc_stress.crow  gc_stress.out  hello.crow  hello.out  mandelbrot.crow  mandelbrot.out  sized_ints.crow  sized_ints.out
runtime/: Cargo.toml
runtime/src/: lib.rs
